# python-project-140

./: .dockerignore  .flake8  .gitignore  Dockerfile  Makefile  README.md  SNIPPETS.md  pyproject.toml
__data__/: README.md  checklist.md  spec.yml
__data__/steps/: 10-init-package.md  20-publish-package.md  30-include-libs.md  40-code-quality.md  50-even-game.md  60-calc-game.md  70-gcd-game.md  80-progression-game.md  90-prime-game.md
brain-games/: even.py
brain-games/scripts/: brain_prime.py
brain_games/: cli.py  engine.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
code/: pyproject.toml
code/.github/workflows/: pyci.yml
code/brain_games/: engine.py
code/brain_games/games/: __init__.py
code/brain_games/scripts/: brain_even.py
games/: progression.py
spec/: 10_brain_games_spec.rb  20_brain_even_spec.rb  30_brain_calc_spec.rb  40_brain_gcd_spec.rb  50_brain_progression_spec.rb  60_brain_prime_spec.rb  spec_helper.rb
