[tool.poetry]
name = "codica-code"
version = "1.0.0"
description = "test"
authors = ["juan"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
  # Aumenta la versión mínima de Python
prompt_toolkit = "^3.0.48"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
wemake-python-styleguide = "^0.19.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[tool.poetry.dev-dependencies]
flake8 = "^7.1.1"  # Añade flake8 aquí si es necesario
