[project]
name = "hexlet-code"
version = "0.1.0"
description = "A small set of math puzzle games"
license = "MIT"
readme = "README.md"
homepage = "https://hexlet.io"
requires-python = ">=3.10"
dependencies = [
    "prompt>=0.4.1",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
